<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>cuidamed</artifactId>

  <build>

    <finalName>${project.artifactId}</finalName>

    <plugins>

      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <mainClass>com.bairontapia.projects.cuidamed.CuidaMedApplication</mainClass>
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>single</goal>
            </goals>
            <id>make-assembly</id>
            <phase>package</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.3.0</version>
      </plugin>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>17</release>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.8.1</version>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>2.22.2</version>
      </plugin>

      <plugin>
        <artifactId>javafx-maven-plugin</artifactId>
        <configuration>
          <mainClass>com.bairontapia.projects.cuidamed.CuidaMedApplication</mainClass>
          <options>
            <option>--add-opens</option>
            <option>javafx.graphics/com.sun.javafx.text=ALL-UNNAMED</option>
          </options>
          <runtimePathOption>CLASSPATH</runtimePathOption>
        </configuration>
        <groupId>org.openjfx</groupId>
        <version>0.0.8</version>
      </plugin>

    </plugins>

  </build>

  <dependencies>

    <dependency>
      <artifactId>commons-lang3</artifactId>
      <groupId>org.apache.commons</groupId>
      <version>3.12.0</version>
    </dependency>
    <dependency>
      <artifactId>commons-dbcp2</artifactId>
      <groupId>org.apache.commons</groupId>
      <version>2.9.0</version>
    </dependency>
    <dependency>
      <artifactId>commons-dbutils</artifactId>
      <groupId>commons-dbutils</groupId>
      <version>1.7</version>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
      <version>1.18.22</version>
    </dependency>
    <dependency>
      <artifactId>javafx-fxml</artifactId>
      <groupId>org.openjfx</groupId>
      <version>17.0.1</version>
    </dependency>
    <dependency>
      <artifactId>javafx-controls</artifactId>
      <groupId>org.openjfx</groupId>
      <version>17.0.1</version>
    </dependency>
    <dependency>
      <artifactId>javafx-graphics</artifactId>
      <groupId>org.openjfx</groupId>
      <version>17.0.1</version>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <scope>runtime</scope>
      <version>42.3.1</version>
    </dependency>

  </dependencies>
  <description>A desktop application that registers the medication intake in a nursing home
  </description>
  <groupId>com.bairontapia.projects</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>CuidaMed</name>

  <properties>
    <encoding>${project.build.sourceEncoding}</encoding>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>${project.build.sourceEncoding}
    </project.reporting.outputEncoding>
    <start-class>com.bairontapia.projects.cuidamed.CuidaMedApplication</start-class>
  </properties>

  <version>0.0.1-SNAPSHOT</version>

</project>
